[gd_scene load_steps=7 format=3 uid="uid://bee1ib456qsfy"]

[ext_resource type="Script" path="res://yogurt_bites.gd" id="1_ni3ql"]
[ext_resource type="Texture2D" uid="uid://cpqxxxctg338w" path="res://Art/Blackberry.png" id="2_xuk8l"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7gytw"]
atlas = ExtResource("2_xuk8l")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_8ju7w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gytw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5kxqk"]
radius = 29.0689

[sub_resource type="CircleShape2D" id="CircleShape2D_thdbx"]
radius = 63.7939

[node name="YogurtBites" type="CharacterBody2D" groups=["Yogurt"]]
scale = Vector2(0.48594, 0.48594)
script = ExtResource("1_ni3ql")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 3
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_8ju7w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5kxqk")

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.768
one_shot = true

[node name="EatingArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EatingArea"]
shape = SubResource("CircleShape2D_thdbx")

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="body_entered" from="EatingArea" to="." method="_on_eating_area_body_entered"]
